Monitoring/HW_Lesson_51_Grafana/app/k8s-manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reddit
  annotations:
    # nginx.ingress.kubernetes.io/app-root: /reddit
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: "reddit"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ui
            port:
              number: 9292
